# ibkr_api

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Create a python project to implement MCP service t.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  plan.md  pyproject.toml
.github/workflows/: ci.yml
.sisyphus/run-continuation/: ses_1c8fde80fffezJMEFINCnvSotw.json  ses_1cf49d703ffe7yLdgeLbQArpCx.json  ses_1d4304f5cffecUIYQF40uU5wuZ.json  ses_1d4322407ffeWqrWS99e3OxSRw.json
alembic/: env.py
alembic/versions/: 0001_initial.py
scripts/: run_sync.py
src/ibkr_mcp/: __init__.py  config.py  ibkr_client.py  logging_config.py  persistence.py  server.py  sync.py
src/ibkr_mcp_service/: __init__.py  config.py  logging_conf.py  main.py
src/ibkr_mcp_service/db/: base.py  orm_models.py  repository.py  session.py
src/ibkr_mcp_service/db/entities/: __init__.py  earnings.py  fundamental.py  quote.py
src/ibkr_mcp_service/ibkr/: __init__.py  client.py  earnings.py  fundamentals.py  quotes.py
src/ibkr_mcp_service/mcp/: __init__.py  server.py
src/ibkr_mcp_service/mcp/tools/: __init__.py  get_earnings.py  get_fundamental.py  get_quote.py
src/ibkr_mcp_service/models/: domain.py  earnings.py  fundamental.py  quote.py
src/ibkr_mcp_service/repositories/: __init__.py  earnings_repo.py  fundamental_repo.py  quote_repo.py
src/ibkr_mcp_service/services/: earnings_service.py  fundamentals_service.py  ibkr_client.py  quote_service.py  sync_service.py
src/ibkr_mcp_service/sync/: sync_manager.py
src/ibkr_mcp_service/tools/: mcp_tools.py
src/ibkr_mcp_service/utils/: __init__.py  time.py
tests/: conftest.py
tests/integration/: test_db_integration.py  test_ib_connection.py  test_ibkr_integration.py
tests/unit/: test_domain_models.py  test_fundamentals_service.py  test_ibkr_client.py  test_ibkr_earnings.py  test_mcp_tools.py  test_persistence.py  test_quote_service.py  test_repository.py  test_server_tools.py  test_sync_manager.py  test_utils_time.py
