[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ibkr-mcp-service"
version = "0.1.0"
description = "MCP service for IBKR market data via ib_async with PostgreSQL persistence"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "ib_async>=2.0.1",
    "mcp>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "structlog>=24.1.0",
    "tenacity>=8.3.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
]

[project.scripts]
ibkr-mcp = "ibkr_mcp_service.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ibkr_mcp_service"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["ibkr_mcp_service"]
omit = ["*/tests/*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN", "BLE", "A"]
ignore = ["ANN101", "ANN204"]
